fixed spacing issue on card

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -40,7 +40,7 @@
   border-right: 1px solid #E6E6E6;
   height: 80px;
   padding-right: 30px;
-  // flex: 1 0 auto;
+  width: 300px;
 }
 
 .card-logo{
@@ -67,7 +67,6 @@
 .card-map {
   width: 32px;
   text-transform: uppercase;
-  margin-right: 9px;
 }
 
 .map {
